Don't mark a history navigation as in page in a new renderer process.

Blink won't realize that the page needs to be loaded from scratch and
will stay in-page on the initial blank page.  This became a problem
when moving the in-page determination to the browser process, where
we need to check whether the renderer process has a committed page
or not.

BUG=635403
TEST=Ctrl+back in page (see bug comment 4 for repro steps)
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_site_isolation

Review-Url: https://codereview.chromium.org/2239413002
Cr-Commit-Position: refs/heads/master@{#411712}

Former-commit-id: 5413169e62dc4c20d31e1afaea680f943bbe085c